<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Political Preparedness</string>
    <string name="upcoming_elections">Upcoming Elections</string>
    <string name="saved_elections">Saved Elections</string>
    <string name="find_my_representatives">Find my representatives</string>
    <string name="ballot_logo_image">Ballot Logo Image</string>
    <string name="upcoming_elections_button">Upcoming elections button</string>
    <string name="find_my_representatives_button">Find my  representatives button</string>
    <string name="error_failed_to_get_address_from_location">Error, Failed to get address from device location</string>
    <string name="representative_search">Representative Search</string>
    <string name="use_my_location">Use my location</string>
    <string name="my_representatives">My Representatives</string>
    <string name="address_line_1">Address Line 1</string>
    <string name="address_line_2">Address Line 2</string>
    <string name="city">City</string>
    <string name="zip">Zip</string>
    <string name="turn_on_location_error_msg">Device location is OFF, turn it on to get voter detailed data</string>
    <string name="representative_image">Representative image</string>
    <string name="representative_www_link">representative www link</string>
    <string name="representative_fb_link">representative fb link</string>
    <string name="representative_twitter_link">representative twitter link</string>
    <string name="error_missing_first_line_address">Error, missing first line address</string>
    <string name="error_missing_city">Error, missing city</string>
    <string name="error_missing_state">Error, missing state</string>
    <string name="error_missing_zip">Error, missing zip code</string>
    <string name="election_information">Election information</string>
    <string name="state_locations">State locations</string>
    <string name="state_ballot">State ballot</string>
    <string name="error_msg_fail_voter_info_check_network">Failed to get voter info, check network connection</string>
    <string name="error_fetch_representatives_network">Failed to get representatives, Check network connection</string>
    <string name="error_get_election_list_network">Unable to refresh election list from network</string>

    <!-- TODO: Add necessary string values -->

</resources>
