<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.example.android.politicalpreparedness.MainActivity">


        <!-- Add image for home screen logo. -->
        <ImageView
            android:id="@+id/imageViewBallotLogo"
            style="@style/election_main_image"
            android:contentDescription="@string/ballot_logo_image"
            app:layout_constraintBottom_toTopOf="@+id/buttonUpcomingElections"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ballot_logo" />

        <!-- Add Button to navigate to upcoming elections. -->
        <Button
            android:id="@+id/buttonUpcomingElections"
            android:layout_height="wrap_content"
            android:contentDescription="@string/upcoming_elections_button"
            android:text="@string/upcoming_elections"
            app:layout_constraintBottom_toTopOf="@+id/buttonFindMyRepresentatives"
            app:layout_constraintEnd_toEndOf="@+id/imageViewBallotLogo"
            app:layout_constraintStart_toStartOf="@+id/imageViewBallotLogo"
            style="@style/launch_button_style" />

        <!-- Add Button to navigate to representatives. -->
        <Button
            android:id="@+id/buttonFindMyRepresentatives"
            android:layout_height="wrap_content"
            android:text="@string/find_my_representatives"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/imageViewBallotLogo"
            app:layout_constraintStart_toStartOf="@+id/imageViewBallotLogo"
            style="@style/launch_button_style" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>