<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="representative"
            type="com.example.android.politicalpreparedness.representative.model.Representative" />

        <variable
            name="clickListener"
            type="com.example.android.politicalpreparedness.representative.adapter.RepresentativeListener" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_margin="8dp">

        <ImageView
            android:id="@+id/representativePhoto"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:contentDescription="@string/representative_image"
            android:padding="4dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_profile" />

        <TextView
            android:id="@+id/representativeItemTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="TextView"
            android:textColor="@color/gray50"
            android:textSize="18sp"
            android:padding="4dp"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@id/representativePhoto"
            tools:text="President of the United States" />

        <TextView
            android:id="@+id/representativeItemName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="TextView"
            android:textColor="@color/gray50"
            app:layout_constraintTop_toBottomOf="@id/representativeItemTitle"
            app:layout_constraintStart_toStartOf="@id/representativeItemTitle"
            tools:text="Donald J. Trump"
            style="@style/representative_info" />


        <TextView
            android:id="@+id/representativeItemParty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="TextView"
            style="@style/representative_info"
            app:layout_constraintTop_toBottomOf="@id/representativeItemName"
            app:layout_constraintStart_toStartOf="@id/representativeItemName"
            tools:text="Republican Party" />

        <ImageView
            android:id="@+id/facebookIcon"
            android:contentDescription="@string/representative_www_link"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/wwwIcon"
            app:srcCompat="@drawable/ic_www"
            style="@style/link_style" />

        <ImageView
            android:id="@+id/twitterIcon"
            style="@style/link_style"
            android:contentDescription="@string/representative_twitter_link"
            app:layout_constraintBottom_toBottomOf="@id/facebookIcon"
            app:layout_constraintEnd_toEndOf="parent"
            app:srcCompat="@drawable/ic_twitter" />

        <ImageView
            android:id="@+id/wwwIcon"
            style="@style/link_style"
            android:contentDescription="@string/representative_fb_link"
            app:layout_constraintBottom_toBottomOf="@id/facebookIcon"
            app:layout_constraintEnd_toStartOf="@id/twitterIcon"
            app:srcCompat="@drawable/ic_facebook" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>